# kc_mental_health2024

./: .gitignore  README.md  evaluate.py  pyproject.toml
data/: categorical_columns.pkl  numerical_columns.pkl  submission.csv
data/preprocess/: categorical_columns.parquet  numerical_columns.parquet  test_prep.parquet  train_prep.parquet
lib/: preprocess.py  utils.py
notebooks/: 00_data_overview.ipynb  cat_boost.ipynb  process_data.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-0/learn/: events.out.tfevents
notebooks/catboost_info/fold-0/test/: events.out.tfevents
notebooks/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-1/learn/: events.out.tfevents
notebooks/catboost_info/fold-1/test/: events.out.tfevents
notebooks/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-2/learn/: events.out.tfevents
notebooks/catboost_info/fold-2/test/: events.out.tfevents
notebooks/catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
(+4 files in other folders)
