[tool.poetry]
name = "kc-mental-health2024"
version = "0.1.0"
description = "Kaggle Challenge to classify mental health problems from tabular patient data."
authors = ["Yves Neyraud <yves.neyraud@outlook.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
altair = {extras = ["all"], version = "^5.4.1"}
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
